# tinfoil-rs

./: Cargo.toml  IMPLEMENTATION.md  README.md
examples/: debug_tls.rs  full_verification.rs  test_api.rs  test_pinning.rs
src/: api.rs  client.rs  error.rs  lib.rs  sigstore.rs  tls.rs
src/attestation/: mod.rs  sev.rs  tdx.rs  types.rs
